Event Row XML Created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="eventTitle">Name</string>
     <string name="eventTime">Time</string>
     <string name="eventDescription">Desc.</string>
+    <string name="event_name">Desc.</string>
 </resources>
