--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="eventTime">Time</string>
     <string name="eventDescription">Desc.</string>
     <string name="event_name">Desc.</string>
+    <string name="day">Day</string>
 </resources>
